codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__diff_panel_collapses_locks_and_navigates_file_changes.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: "format!(\"opened:\\n{opened}\\njumped to b:\\n{jumped}\\nclosed and re-expanded:\\n{closed}\",)"
---
opened:
"● Edited src/a.rs (+1 -1)                                                                                               "
"                                                                         2 files changed +2 -2                       ✕  "
"● Edited src/b.rs (+1 -1)                                                uncommitted (vs HEAD)                          "
"                                                                                                                        "
"                                                                         ▶ src/a.rs                               +1 -1 "
"                                                                           src/b.rs                               +1 -1 "
"                                                                                                                        "
"                                                                         src/a.rs +1 -1                                 "
"                                                                         ────────────────────────────────────────────── "
"                                                                         1 -old                                         "
"                                                                         1 +new                                         "
"                                                                                                                        "
"                                                                         src/b.rs +1 -1                                 "
"                                                                         ────────────────────────────────────────────── "
"                                                                         1 -before                                      "
"                                                                         1 +after                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"› Ask Codex to do anything                                                                                              "
"                                                                                                                        "
"  Read Only        · gpt-5.6-sol default · /tmp/project                                                                 "
jumped to b:
"● Edited src/a.rs (+1 -1)                                                                                               "
"                                                                         2 files changed +2 -2                       ✕  "
"● Edited src/b.rs (+1 -1)                                                uncommitted (vs HEAD)                          "
"                                                                                                                        "
"                                                                           src/a.rs                               +1 -1 "
"                                                                         ▶ src/b.rs                               +1 -1 "
"                                                                                                                        "
"                                                                         src/a.rs +1 -1                                 "
"                                                                         ────────────────────────────────────────────── "
"                                                                         1 -old                                         "
"                                                                         1 +new                                         "
"                                                                                                                        "
"                                                                         src/b.rs +1 -1                                 "
"                                                                         ────────────────────────────────────────────── "
"                                                                         1 -before                                      "
"                                                                         1 +after                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"› Ask Codex to do anything                                                                                              "
"                                                                                                                        "
"  Read Only        · gpt-5.6-sol default · /tmp/project                                                                 "
closed and re-expanded:
"● Edited src/a.rs (+1 -1)                                                                                               "
"    1 -old                                                                                                              "
"    1 +new                                                                                                              "
"  Show less ↑                                                                                                           "
"                                                                                                                        "
"● Edited src/b.rs (+1 -1)                                                                                               "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"› Ask Codex to do anything                                                                                              "
"                                                                                                                        "
"  Read Only        · gpt-5.6-sol default · /tmp/project                                                                 "
