codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__diff_panel_preserves_independent_file_change_expansion.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: "format!(\"opened with expanded changes:\\n{opened}\\ncollapsed while open:\\n{collapsed}\\nre-expanded while open:\\n{reexpanded}\\nclosed with expansion preserved:\\n{closed}\",)"
---
opened with expanded changes:
"● Edited src/a.rs (+1 -1)                                                                                               "
"    1 -old                                                               2 files changed +2 -2                       ✕  "
"    1 +new                                                               uncommitted (vs HEAD)                          "
"  Show less ↑                                                                                                           "
"                                                                         ▶ src/a.rs                               +1 -1 "
"● Edited src/b.rs (+1 -1)                                                  src/b.rs                               +1 -1 "
"    1 -before                                                                                                           "
"    1 +after                                                             src/a.rs +1 -1                                 "
"  Show less ↑                                                            ────────────────────────────────────────────── "
"                                                                         1 -old                                         "
"                                                                         1 +new                                         "
"                                                                                                                        "
"                                                                         src/b.rs +1 -1                                 "
"                                                                         ────────────────────────────────────────────── "
"                                                                         1 -before                                      "
"                                                                         1 +after                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"› Ask Codex to do anything                                                                                              "
"                                                                                                                        "
"  Read Only        · gpt-5.6-sol default · /tmp/project                                                                 "
collapsed while open:
"● Edited src/a.rs (+1 -1)                                                                                               "
"                                                                         2 files changed +2 -2                       ✕  "
"● Edited src/b.rs (+1 -1)                                                uncommitted (vs HEAD)                          "
"    1 -before                                                                                                           "
"    1 +after                                                             ▶ src/a.rs                               +1 -1 "
"  Show less ↑                                                              src/b.rs                               +1 -1 "
"                                                                                                                        "
"                                                                         src/a.rs +1 -1                                 "
"                                                                         ────────────────────────────────────────────── "
"                                                                         1 -old                                         "
"                                                                         1 +new                                         "
"                                                                                                                        "
"                                                                         src/b.rs +1 -1                                 "
"                                                                         ────────────────────────────────────────────── "
"                                                                         1 -before                                      "
"                                                                         1 +after                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"› Ask Codex to do anything                                                                                              "
"                                                                                                                        "
"  Read Only        · gpt-5.6-sol default · /tmp/project                                                                 "
re-expanded while open:
"● Edited src/a.rs (+1 -1)                                                                                               "
"    1 -old                                                               2 files changed +2 -2                       ✕  "
"    1 +new                                                               uncommitted (vs HEAD)                          "
"  Show less ↑                                                                                                           "
"                                                                         ▶ src/a.rs                               +1 -1 "
"● Edited src/b.rs (+1 -1)                                                  src/b.rs                               +1 -1 "
"    1 -before                                                                                                           "
"    1 +after                                                             src/a.rs +1 -1                                 "
"  Show less ↑                                                            ────────────────────────────────────────────── "
"                                                                         1 -old                                         "
"                                                                         1 +new                                         "
"                                                                                                                        "
"                                                                         src/b.rs +1 -1                                 "
"                                                                         ────────────────────────────────────────────── "
"                                                                         1 -before                                      "
"                                                                         1 +after                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"› Ask Codex to do anything                                                                                              "
"                                                                                                                        "
"  Read Only        · gpt-5.6-sol default · /tmp/project                                                                 "
closed with expansion preserved:
"● Edited src/a.rs (+1 -1)                                                                                               "
"    1 -old                                                                                                              "
"    1 +new                                                                                                              "
"  Show less ↑                                                                                                           "
"                                                                                                                        "
"● Edited src/b.rs (+1 -1)                                                                                               "
"    1 -before                                                                                                           "
"    1 +after                                                                                                            "
"  Show less ↑                                                                                                           "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"› Ask Codex to do anything                                                                                              "
"                                                                                                                        "
"  Read Only        · gpt-5.6-sol default · /tmp/project                                                                 "
